添加笔记,网络安全部分-->深度报文解析以太网帧、IP、TCP部分

--- a/笔记.md
+++ b/笔记.md
@@ -6542,9 +6542,14 @@ clean:
 #指定依赖库(目标, 依赖库)
 	target_link_libraries(dpi pcap)
 
+# 指定需要依赖编译的源文件
+file(GLOB SRC_FILE "./include/*.c")
+
+
 #用例 $cat ./CMakeLists.txt
 include_directories(./include)	#头文件
-add_executable(dpi.out ./Main.c)	#编译规则
+file(GLOB SRC_FILE "./include/*.c")
+add_executable(dpi.out ./Main.c ${SRC_FILE})	#编译规则
 target_link_libraries(dpi.out pcap)	#依赖库
 
 
@@ -10110,15 +10115,35 @@ $: sudo /etc/init.d/auditd restart	# 重启审计服务
 
 ### 7.6.2 深度报文解析
 
-> pcap-e=dev开发包: `$: sudo apt-get install libpcap-dev`
+> pcap-dev开发包: `$: sudo apt-get install libpcap-dev`
 >
 > 查看帮助`man pcap`
 >
 > 头文件: `#include <pcap/pcap.h>`
 > 编译程序: `-lpcap`参数
 
+|  |                                           | |
+| ------ | ------------------------------------------------------------ | ------ |
+| 应用层 | HTTP、FTP、Telnet、SMTP(e-mail) | 应用层数据 |
+| 表示层 | ASCII、SSL/TLS   | 解析翻译 |
+| 会话层 | ADSP、RPC | 发送时报文打包。 接收时校验报文完整性 |
+| 传输层 | ICMP、TCP和UDP | 把包上传或下发 |
+| 网络层 | IP、ARP、RARP和IGMP | 发送时报文添加ip地址。接收时校验ip是不是给自己的,不是转发 |
+| 链路层 | HDLC、PPP、SLIP-->（以太网,局域网） | 发送时查表ip转mac转成电信号。接受时将电信号整理成帧 |
+| 物理层 |  S 232C、RS 449/422/423、V.24和X.21、X.21BIS                               | 定义好各种信号，线路和插口的格式，发送 |
+
+![](./image/v2-1578921092d775e024345fa8a531a85e_720w.png)
+
 ```cpp
 	char errbuf[PCAP_ERRBUF_SIZE]
+        
+	typedef void(*pcap_handler)(u_char* user, const struct pcap_pkthdr* h, 
+                                const u_char* bytes);
+	/*
+		- user: 回调函数传参
+		-h: 报文头指针
+		-bytes: 报文数据
+	*/
 
 	pcap_t* pcap_open_offline(const char* fname, char* errbuf);
 	// 打开以前保存捕获数据包的文件(.paca)，用于读取
@@ -10135,16 +10160,127 @@ $: sudo /etc/init.d/auditd restart	# 重启审计服务
                	u_int precision, char* errbuf);
 
 	int pcap_loop(pcap_t* p, int cnt,pcap_handler callback, u_char* user);
-	// 捕获并处理数据包。此函数在cnt个数据包被处理或出现错误时才返回，但读取超时不会返回
+	// 捕获并处理数据包。
 	/* 参数
-		- cnt: 参数为负值时pcap_loop()函数将始终循环运行，除非出现错误。 
+		- cnt: 此函数在cnt个数据包被处理或出现错误时才返回，参数为负值时pcap_loop()函数将始终循环运行.					但读取超时不会返回,可以默认传参0
 		- callback: 搜到数据包时的处理回调函数
 		- user: 回调函数参数*/
 
 	void pcap_close(pcap_t *p);		//关闭p参数相应的文件，并释放资源
 ```
 
+#### 7.6.2.1 以太网帧
 
+```cpp
+// Mac头部,总长度14字节 /usr/include/net/ethernet.h
+// #include<linux/if_ether.h>
+#define ETH_ALEN 6  //定义了以太网接口的MAC地址的长度为6个字节
+#define ETH_HLAN 14  //定义了以太网帧的头长度为14个字节
+#define ETH_ZLEN 60  //定义了以太网帧的最小长度为 ETH_ZLEN + ETH_FCS_LEN = 64个字节
+#define ETH_DATA_LEN 1500  //定义了以太网帧的最大负载为1500个字节
+#define ETH_FRAME_LEN 1514  //定义了以太网正的最大长度为ETH_DATA_LEN + ETH_FCS_LEN = 1518个字节
+#define ETH_FCS_LEN 4   //定义了以太网帧的CRC值占4个字节
+typedef struct ether_header
+{
+    uint8_t ether_dhost[ETH_ALEN];	// dstmac，目标mac地址
+    uint8_t ether_shost[ETH_ALEN];	// srcmac，源mac地址
+    uint16_t ether_type;	// eth_type,以太网类型 	IP(ETH_P_IP:0x0800),ARP(ETH_P_ARP:0x0806),RARP(ETH_P_RARP:0x8035),IPV6(ETH_P_IPV6:0x86DD) 
+}__attribute__ ((__packed__));   //用于告诉编译器不要对这个结构体中的缝隙部分进行填充操作；
+```
+
+`以太网(设备驱动程序及接口网 )[ 目的地址6字节, 源地址6字节, 类型2字节, 上层数据,CRC4z字节]`
+
+![以太网](./image/eth4.png)
+
+#### 7.6.2.2 IP报文
+
+```cpp
+// IP头部,总长度20字节 /usr/include/netinet/ip.h
+// 常用ip协议宏定义 /usr/include/netinet/in.h
+/* 不能直接使用一个大结构体把几个直接包含头结构,以太网头最后类型那两字节会被内存对齐成4字节
+错误用法
+struct aptest
+{
+    struct ether_header eth;
+    struct iphdr ip;
+};
+*/
+struct iphdr
+  {
+#if __BYTE_ORDER == __LITTLE_ENDIAN	//大端
+    unsigned int ihl:4;
+    unsigned int version:4;
+#elif __BYTE_ORDER == __BIG_ENDIAN	// 小端
+    unsigned int version:4;//版本 IPV4，IPV6
+    unsigned int ihl:4;  //IP头长度,一般20字节=值x4(字节)
+#else
+# error "Please fix <bits/endian.h>"
+#endif
+    uint8_t tos;      //服务类型,一般没有使用，详细参考RFC
+    uint16_t tot_len;  //header＋数据 总长度
+    uint16_t id;       //IP 报文的唯一id，分片报文的id 相同，便于进行重组。
+    uint16_t frag_off; //分片编号(标明是否分片)+分片偏移(偏移值/8)
+    uint8_t ttl;       //路由器的跳转数
+    uint8_t protocol;  //传输层协议, ICMP(IPPROTO_ICMP:1)，TCP(IPPROTO_TCP:6)，UDP(IPPROTO_UDP:17)
+    uint16_t check;    //IP header校验和,如果接收端收到报文进行计算如果校验和错误,直接丢弃。
+    uint32_t saddr;    //源IP地址
+    uint32_t daddr;    //目的IP地址
+    /*The options start here. */
+  };
+```
+**选项段一般没有使用,详细参考RFC.  数据段为上层报文,如TCP 报文、UDP报文.**
+
+![](./image/ip1.png)
+
+IP如果拆包。如果是第一片取值为0，第二片取值175，以此类推。 
+
+![IP包拆包](./image/ip2.png)
+
+#### 7.6.2.3 TCP
+
+```c++
+// tcp头部,总长度20字节 /usr/include/netinet/tcp.h
+
+typedef	uint32_t tcp_seq;
+/*
+ * TCP header.
+ * Per RFC 793, September, 1981.
+ */
+struct tcphdr
+{
+	uint16_t source;	// 源端口
+	uint16_t dest;		// 目标端口
+	uint32_t seq;
+	uint32_t ack_seq;
+# if __BYTE_ORDER == __LITTLE_ENDIAN
+	uint16_t res1:4;	// 6位保留位中的前4位
+	uint16_t doff:4;	// 4位头首部长度
+	uint16_t fin:1;
+	uint16_t syn:1;
+	uint16_t rst:1;
+	uint16_t psh:1;
+	uint16_t ack:1;
+	uint16_t urg:1;
+	uint16_t res2:2;	// 6位保留位中的后2位
+# elif __BYTE_ORDER == __BIG_ENDIAN
+	uint16_t doff:4;
+	uint16_t res1:4;
+	uint16_t res2:2;
+	uint16_t urg:1;
+	uint16_t ack:1;
+	uint16_t psh:1;
+	uint16_t rst:1;
+	uint16_t syn:1;
+	uint16_t fin:1;
+# endif
+	uint16_t window;	// 16位滑动窗口大小
+	uint16_t check;		// 16位TCP头校验和
+	uint16_t urg_ptr;	// 16位紧急指针
+};
+
+```
+
+![tcp](./image/tcp1.png)
 
 
 
