--- a/笔记.md
+++ b/笔记.md
@@ -5183,14 +5183,17 @@ typedef struct _EXCEPTION_RECORD
 # Sources
 	TARGETNAME=DDK_HellWord 		// 指定生成的驱动的名字
 	TARGETTYPE=DRIVER 		// 指定生成文件类型 Driver是驱动文件
-	TA	RGETPATH=Check /		/ 指定生成驱动所有路径
+	TA	RGETPATH=Check 		// 指定生成驱动所有路径
 	INCLUDES=$(BASEDIR)\inc;\ 		// 指定相关头文件所在模具路径
 	$(BASEDIR)\inc\wxp;\
 	// 空一行
 	SOURCES=mini_ddk.c\		 // 指定驱动源代码 *.c *.cpp
     
 'cmd设置驱动服务'
-/* 注册服务([sc create]:创建一个服务 [binPath]:驱动文件路径 [type]:驱动类型 [start]:该服务的启动类型) */
+/* 注册服务([sc create]:创建一个服务 [binPath]:驱动文件路径 [type]:驱动类型 [start]:该服务的启动类型) 
+	注册表位置: HKEYLOCALMACHINE＼SYSTEM＼Cu∏entControlSet＼Services
+*/
+    
 	sc create FirstDriver binPath= "C:\FirstDirver.sys" type= kernel start= demand
 /* 创建驱动服务后,使用sc命令启动服务 [sc start]:等同于 StartService函数*/
 	sc start FirstDriver
@@ -5299,11 +5302,7 @@ typedef struct _LDR_DATA_TABLE_ENTRY {
 
 ![](/image/20221104162941.png)
 
-#### 6.3.2.0 内核结构体
 
-```c
-
-```
 
 #### 6.3.2.1 基础API
 
@@ -5424,7 +5423,7 @@ DECLARE_CONST_UNICODE_STRING(ntDeviceName, L"name"); 	/*定义常量UNICODE_STRI
                                      size_t cchDest, 		// 字符串大小
                                      NTSTRSAFE_PCSTR pszFormat, // 需要初始化的字符串(char*)("sad%d %c")
                                      ...); 						// 需要格式化的参数, N
-	NTSTATUS RtlAppendUnicodeToString(PUNICODE_STRING, PCWSTR);	// 讲UNICODE_STRING字符串拷贝到PCWSTR
+	NTSTATUS RtlAppendUnicodeToString(PUNICODE_STRING, PCWSTR);	// 讲UNICODE_STRING字符串拷贝添加到PCWSTR
 
 /* 字符串打印 */
 	KdPrint(("111%d", a)); 	// 宏函数,Dbg模式会调用DbgPrint,Rele模式不操作
@@ -5452,7 +5451,7 @@ struct KSPIN_LOCK my_spin_lock; 	// 锁结构，
 void KeInitializeEvent(PKEVENT Event, EVENT_TYPE Type, BOOLEAN Status);
 ```
 
-#### 6.3.2.4 内核链表操作
+#### 6.3.2.4 内核链表
 
 ```C
 typedef struct _LIST_ENTRY	/* 内核链表结构体*/
@@ -10192,7 +10191,7 @@ typedef struct ether_header
 
 ![以太网](./image/eth4.png)
 
-#### 7.6.2.2 IP报文
+#### 7.6.2.2.1 IP报文
 
 ```cpp
 // IP头部,总长度20字节 /usr/include/netinet/ip.h
@@ -10281,6 +10280,207 @@ struct tcphdr
 ```
 
 ![tcp](./image/tcp1.png)
+
+#### 7.6.2.4 UDP
+
+```cpp
+// udp头 /usr/include/netinet/udp.h
+
+struct udphdr
+{
+  __extension__ union /* 联合体*/
+  {
+    struct
+    {
+      uint16_t uh_sport;    /* source port */
+      uint16_t uh_dport;    /* destination port */
+      uint16_t uh_ulen;     /* udp length */
+      uint16_t uh_sum;      /* udp checksum */
+    };
+    struct
+    {
+      uint16_t source;		// 源端口号
+      uint16_t dest;		// 目标端口号
+      uint16_t len;			// UDP整个报文长度(头+数据段)
+      uint16_t check;		// UDP数据校验和
+    };
+  };
+};
+```
+
+
+
+![ubp](./image/udp1.png)
+
+#### 7.6.2.5 TFTP
+
+**配置TFTP**
+
+```shell
+# 安装TFTP服务端
+$: sudo apt-get install tftpd-hpa -y
+
+#初始化配置
+$: vi /etc/default/tftpd-hpa
+
+TFTP_USERNAME="tftp"	
+TDTP_DIRECTORY="/var/lib/tftpboot"	# TFTP_Server服务目录
+TFTP_ADDRESS=":69"	# 默认为0.0.0.0:69,表示所有IP都可以访问
+TFTP_OPTIONS="--secure"
+# 修改为
+TFTP_USERNAME="tftp"
+TDTP_DIRECTORY="/tmp/"
+TFTP_ADDRESS=":69"
+TFTP_OPTIONS="-l -s -c"	
+	# -l: 以standalone/listen模式启动TFTP
+	# -c: 可创建新文件,TFTP默认只允许覆盖原有文件而不能创建新文件
+	# -s: 改变TFTP启动根目录后,添加-s客户端使用不需要再输入指定目录,使用配置目录
+	
+# 重启服务
+$: sudo /etc/init.d/tftpd-hpa restart
+```
+
+```shell
+# 客户端连接
+$: tftp 127.0.0.1
+# 退出
+tftp> put a.tar.gz
+#上传文件
+tftp> put a.tar.gz
+#下载文件
+tftp> get a.tar.gz
+```
+
+**TFTP包**
+
+| opcode | operation                                          |
+| ------ | -------------------------------------------------- |
+| 01     | Read request(RRQ) 读取请求                         |
+| 02     | Write request(WRQ) 写请求                          |
+| 03     | Data (DATA) 数据传输                               |
+| 04     | Acknowledgment (ACK) 回应包                        |
+| 05     | Error (ERROR), 错误应答,如请求传输一个不存在的文件 |
+
+```c++
+struct tftphdr
+{
+	 __extension__ union
+	 {
+	 	struct
+	 	{
+	 		uint16_t opcode;
+	 		uint8_t Filename[];
+	 		uint8_t Mode[];
+	 	}RWRQ;
+		struct
+	 	{
+	 		uint16_t opcode;
+	 		uint16_t block;
+	 		uint8_t data[];
+	 	}DATA;
+		struct
+	 	{
+	 		uint16_t opcode;
+	 		uint16_t block;
+	 	}ACK;
+	 	struct
+	 	{
+	 		uint16_t opcode;
+	 		uint16_t errorcode;
+	 		uint8_t errMsg[];
+	 	}ERROR;
+	 }
+}
+```
+
+```shell
+# RRQ/WRQ数据包格式
+2 bytes    string   1 byte string 1 byte
+------------------------------------------------
+| Opcode | Filename | 0 | Mode | 0 |
+------------------------------------------------
+特征: 2字节Opcode + Filename(长度不等至少1) +1字节0 + Mode(长度不等至少4)+ 1字节0
+	Opcode: 01 | 02
+	Mode: "netascii" | "mail" | "octet"
+
+# DATA数据包格式
+2 bytes   2 bytes   n bytes
+----------------------------------
+| Opcode | Block # | Data |
+----------------------------------
+特征: 2字节Opcode + 2字节Block + Data(0-512字节)
+	Opcode: 03
+
+# ACK应答包
+2 bytes 2 bytes
+---------------------
+| Opcode | Block # |
+---------------------
+特征: 2字节Opcode+2字节Block
+	Opcode: 4
+	Block: 包号为要确认的数据包的包号,WRQ数据包被ACK数据包确认，WRQ数据包的包号为0
+
+# ERROR包
+2 bytes       2 bytes string 1 byte
+-----------------------------------------
+| Opcode | ErrorCode | ErrMsg | 0 |
+-----------------------------------------
+特征: 2字节Opcode + 2字节ErrorCode + ErrMsg(长度不等至少1) + 1字节0
+	Opcode: 5
+	ErrorCode: 0(未定义) | 1(文件未找到) | 2(访问非法) | 3(磁盘满或超过分配的配额) | 
+		4(非法的TFTP操作) | 5(未知的传输ID) | 6(文件已经存在) | 7(没有类似的用户)
+```
+
+
+
+#### 7.6.2.6 NTP
+
+**配置ntpdate**
+
+```shell
+# 安装
+$: sudo apt-get install ntpdate
+
+# 查询当前系统时间
+$: date
+
+# 对时
+$: sudo ntpdate -u ntp.api.bz	# 同步中国(国家授时中心)服务器时间210.72.145.44
+```
+
+![ubp](./image/ntp2.png)
+
+**ntpdate协议**
+
+```cpp
+struct ntphdr
+{
+# if __BYTE_ORDER == __LITTLE_ENDIAN
+	uint8_t mode:3;
+	uint8_t vn:3;
+    uint8_t li:2;
+# elif __BYTE_ORDER == __BIG_ENDIAN
+    uint8_t li:2;	// 长度2个位. 值为“11”时表示告警状态时钟未被同步,为其他值时NTP本身不做处理
+	uint8_t vn:3;	// 长度为3个位. 表示NTP的版本号.目前的最新版本为4
+	uint8_t mode:3;	// 长度为3个位，表示NTP的工作模式。不同的值所表示的含义分别是：
+    					/*0未定义、1表示主动对等体模式、2表示被动对等体模式、3表示客户模式、4表示服务器模式、5表示广播模式或组播模式、6表示此报文为NTP控制报文、7预留给内部使用 */
+# endif
+    // 系统时钟的层数，取值范围为1～16，它定义了时钟的准确度。层数为1的时钟准确度最高，准确度从1到16依次递减，层数为16的时钟处于未同步状态，不能作为参考时钟,0表示未填充
+    uint8_t stratum;	
+    uint8_t poll;		// 轮询时间, 即两个连续NTP报文之间的时间间隔。
+    uint8_t precision;	// 系统时钟的精度
+    uint32_t root_delay;	//本地到主参考时钟源的往返时间
+    uint32_t root_dispersion;	// 系统时钟相对于主参考时钟的最大误差
+    uint32_t reference_identifier;	//参考时钟源的标识
+    uint64_t reference_timestamp;	// 系统时钟最后一次被设定或更新的时间
+    uint64_t originate_timestamp;	// NTP请求报文离开发送端时发送端的本地时间
+    uint64_t receive_timestamp;		// NTP请求报文到达接收端时接收端的本地时间
+    uint64_t transmit_timestamp;	// 应答报文离开应答者时应答者的本地时间
+    uint96_t authenticator;			// 验证信息(可以没有)
+}
+```
+
+![ubp](./image/ntp3.png)
 
 
 
